--- a/CyberUtsav-2024/index.html
+++ b/CyberUtsav-2024/index.html
@@ -4,19 +4,18 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Advanced Quiz Website</title>
+    <title>Quiz Game</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 </head>
 
 <body>
     <!-- Landing Page -->
-    <center>
+     <center>
         <div class="landing-page" id="landingPage">
             <h1>MindSpark Trivia</h1>
-            <p>Where curiosity meets competition</p>
+            <p>Select any category to start</p>
             <div id="categories" class="categories">
-    </center>
     <!-- For the buttons -->
     <button class="category-btn" data-category="Science">
         <i class="fas fa-atom"></i> Science
