--- a/CyberUtsav-2024/Resistration page.html
+++ b/CyberUtsav-2024/Resistration page.html
@@ -23,7 +23,7 @@
             <input type="text" id="Username" name="Username" maxlength="15" placeholder="Enter your username" required>
         </div>
       </div>
-      <button id="reguster-btn" class="register-btn">Register</button>
+      <button id="reguster-btn" class="register-btn"><a href="index2.html">Register</a></button>
     </form>
     </div>
   </body>
