--- a/CyberUtsav-2024/index.html
+++ b/CyberUtsav-2024/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Quiz Game</title>
+    <img src="">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
@@ -47,7 +48,6 @@
     <!-- Quiz Container -->
     <div class="quiz-container hidden" id="quizContainer">
         <h2 class="category-title" id="categoryTitle"></h2>
-        <div class="progressBar" id="progressBar"></div>
         <div class="question-container" id="questionContainer"></div>
         <div class="choices-container" id="choicesContainer"></div>
         <div class="feedback" id="feedback"></div>
